# BBAgent

./: README.md  bbagent.py  config.yaml  pyproject.toml  requirements.txt  soul.md  test_bbagent.py
bbagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: README.md
docs/features/: 01-configuration.md  02-tool-registry.md  03-builtin-tools.md  04-memory-store.md  05-skills-system.md  06-persistent-memory.md  07-mcp-client.md  08-agent-loop.md  09-self-review.md  10-delegation.md  11-interactive-cli.md  12-cross-platform-helpers.md  13-soul-identity.md
